--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -68,6 +68,10 @@
             </div>
         </section>
 
+        <section class="CTA">
+            <button>Download Now!</button>
+        </section>
+
         <footer>Copyright Vacation Planner 2020</footer>
 
 
