added marketing-pg.less boilerplate, fixed h2 tag, added div planner-text

--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -31,10 +31,12 @@
                 <img src="" alt="">
                 <img src="" alt="">
             </div>
-            <h2>Plan Your Trip In One Place</h1>
+            <div class="planner-text">
+                <h2>Plan Your Trip In One Place</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ratione quos est accusamus? Omnis
                     dignissimos maiores suscipit optio! At, mollitia? Voluptatibus, nemo esse impedit ut dolorum ratione
                     possimus commodi expedita.</p>
+            </div>
 
         </section>
 
