created img folder, changed html title to Just Vacay

--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vacation Planner</title>
+    <title>Just Vacay</title>
 
     <link rel="stylesheet" href="css/index.css">
 
@@ -14,11 +14,11 @@
     <header>
         <img src="" alt="">
         <nav>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Blog</a>
+            <a href="#">Services</a>
         </nav>
     </header>
 
