started editing the html, added flex to marketing-pg.less

--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -45,16 +45,14 @@
                 <img src="" alt="">
                 <div class="top-row-text">
                     <h3>Book Your Accomodations, Meals and Tours</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, aliquid! Quos nam eaque expedita
-                        ipsam perferendis, iusto illum obcaecati cum beatae sed totam eius, soluta itaque labore
-                        voluptatibus fugiat dicta!</p>
+                    <p>With Vacay you will find it quick and simple to navigate between booking your hotel, AirBnb </p>
                 </div>
             </div>
 
             <div class="bottom-row">
                 <img src="" alt="">
                 <div class="bottom-row-text">
-                    <h3>Book Your Accomodations, Meals and Tours</h3>
+                    <h3>Manage Your Budget</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, aliquid! Quos nam eaque expedita
                         ipsam perferendis, iusto illum obcaecati cum beatae sed totam eius, soluta itaque labore
                         voluptatibus fugiat dicta!</p>
