added an img to img folder, finished styling the header, finished styling the .planner class section

--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="" alt="">
+        <img src="img/Vaca-logo.png" alt="">
         <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
@@ -27,10 +27,11 @@
         <section class="planner">
             <!--Top of page section-->
             <div class="planner-imgs">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img/download.jpg" alt="an image of a beautiful hotel resort">
+                <img src="img/restaurant-img.jpg" alt="an over head image of people enjoying a feast at a restaurant">
+                <img src="img/family-tours.jpg" alt="a picture of a family of 3 taken infront of the colisseum">
             </div>
+            
             <div class="planner-text">
                 <h2>Plan Your Trip In One Place</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ratione quos est accusamus? Omnis
