adjusted the CSS for .booking and added some html to flesh out the boilerplate text

--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -61,9 +61,7 @@
                 </div>
                 <div class="bottom-row-text">
                     <h3>Manage Your Budget</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, aliquid! Quos nam eaque expedita
-                        ipsam perferendis, iusto illum obcaecati cum beatae sed totam eius, soluta itaque labore
-                        voluptatibus fugiat dicta!</p>
+                    <p>Our built in software will estimate prices based on user data and give you realistic expectations for hotel rates, meal costs and tour prices. Within Just Vacay you can see how far your dollars will go and give you realistic package totals. You'll never overspend again!</p>
                 </div>
             </div>
         </section>
