finished footer and button styling

--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just Vacay</title>
+    <script src="https://kit.fontawesome.com/630120c765.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/index.css">
 
@@ -75,7 +76,7 @@
         </section>
 
         <section class="CTA">
-            <button>Download Now!</button>
+            <button><i class="fab fa-app-store"></i>Download Now!<i class="fab fa-google-play"></i></button>
         </section>
 
         <footer>Copyright Vacation Planner 2020</footer>
