finished adding css styling for tablet views, added fonts to headers and text, fixed borders, added mixins for DRY code.

--- a/marketing-pg.html
+++ b/marketing-pg.html
@@ -71,7 +71,7 @@
             <img src="img/save-money.jpg" alt="image of a logo with the ok hand sign given with a money symbol in between the index finger and thumb">
             <div>
                 <h3>Save Money On Your Trips</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem eveniet atque ab magnam quia velit fugiat, inventore laborum minima quo doloremque quam perferendis ea! Doloremque modi soluta quis asperiores itaque!</p>
+                <p>The difference with Just Vacay are the options that allow you to save more $ on your trips! Just Vacay does its best to find the best deals that accomodate your vacation needs, allowing you to easily book your dream vacations without having to put a strain on your wallet.</p>
             </div>
         </section>
 
